--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
